<resources>
    <string name="app_name">EcoHero</string>
    <string name="app_name_scanner">EcoHero Scanner</string>
    <string name="next">Next</string>
    <string name="join">Join</string>
    <string name="close">Close</string>
    <string name="loading">Loading…</string>
    <string name="base_url">https://3r-api.tinkerhub.dev/</string>
    <string name="qr_url_link">https://api.qrserver.com/v1/create-qr-code/?size=600x600&amp;data=%s</string>

    <!-- Server Error Message -->
    <string name="no_internet_connection">Please check your internet connection and try again later.</string>
    <string name="something_went_wrong">Something went wrong. Try again later.</string>

    <!-- Login Screen -->
    <string name="login_title">@string/login_button</string>
    <string name="login_title_subheader">Easily find community programs and events near you</string>
    <string name="username_input_label">Username</string>
    <string name="password_input_label">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="explore_the_app_label">Explore the app first instead &#x2794;</string>

    <!-- Registration Screen -->
    <string name="register_title">Register</string>
    <string name="name_input_label">Full Name</string>
    <string name="email_input_label">Email</string>

    <!-- Explore Screen -->
    <string name="explore_title">Explore</string>
    <string name="upcoming_events_title">Upcoming Activities</string>
    <string name="trending_activities_title">Trending Activities</string>

    <!-- Item Display Screen -->
    <string name="about_title">About</string>
    <string name="mechanics_title">Mechanics</string>
    <string name="date_format">%s - %s</string>
    <string name="hosted_by_label">Hosted by</string>
    <string name="button_action_join">Yes, I\'d like to join</string>
    <string name="label_action_join">Join Event?</string>
    <string name="button_action_joined">Claim Points</string>
    <string name="label_action_joined">You are joining!</string>
    <string name="button_action_claim_more_points">Generate new QR Code</string>
    <string name="label_action_claim_more_points">Keep going!</string>
    <string name="button_action_max_points">See points earned</string>
    <string name="label_action_max_points">Thank you for joining!</string>
    <string name="button_action_redeem">Redeem</string>
    <string name="label_action_redeem">Get your rewards now!</string>

    <!-- Reward Selector Screen -->
    <string name="reward_selector_title">Select a reward</string>
    <string name="reward_selector_subtitle">Choose a reward that you would like to claim.</string>

    <!-- Profile Screen -->
    <string name="points_button">Points</string>
    <string name="rewards_button">Rewards</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="logout_button">Logout</string>
    <string name="bronze_badge">BRONZE</string>
    <string name="silver_badge">SILVER</string>
    <string name="gold_badge">GOLD</string>
    <string name="platinum_badge">PLATINUM</string>

    <!-- Acknowledgement Dialog -->
    <string name="description_show_qr_code">Show this QR Code to the organizer when claiming points.</string>
    <string name="description_claim_rewards">Show this QR Code to the partner store when claiming your rewards.</string>
    <string name="button_action_see_rewards">See Rewards</string>
    <string name="qr_data_format">%s;%s;%s</string>

    <!-- Points Received Dialog -->
    <string name="title_points_received">Points Received!</string>
    <string name="description_points_received"><b>Congrats!</b> Your hardwork paid off. You deserve it.</string>

    <!-- Rewards Screen -->
    <string name="subheader_points_available">Points Available</string>
    <string name="rewards_tab_title">@string/rewards_button</string>
    <string name="available_tab_title">Available</string>
    <string name="redeemed_tab_title">Redeemed</string>
    <string name="rewards_for_you_title">Rewards for you</string>

    <!-- Scanner Success Screen -->
    <string name="success_title">Points have been awarded!</string>
    <string name="label_points_being_awarded">Hold on, points being awarded…</string>
    <string name="button_scan_new_qr">Scan New QR</string>
</resources>