<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.register.registrationinput.RegistrationInputFragment">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/image_button_back"
        android:layout_width="@dimen/default_icon_dimens"
        android:layout_height="@dimen/default_icon_dimens"
        android:layout_marginStart="@dimen/dp_12"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@null"
        android:padding="@dimen/dp_4"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow"
        android:translationZ="@dimen/dp_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_80"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_title"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view_logo" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textview_title_subheader"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_64"
                android:layout_marginVertical="@dimen/dp_8"
                android:text="@string/login_title_subheader"
                android:textAlignment="center"
                android:textColor="@color/primaryTextColor"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_title" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_item"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/dp_32"
                android:hint="@string/username_input_label"
                app:layout_constraintBottom_toTopOf="@id/button_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_title_subheader"
                app:layout_constraintVertical_bias=".1"
                app:layout_constraintVertical_chainStyle="packed"
                app:startIconDrawable="@drawable/ic_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_action"
                style="@style/DefaultButton"
                android:layout_width="@dimen/dp_0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/login_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_item"
                app:layout_constraintVertical_bias="0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>