<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tinkerhub.replenish.features.explore.ExploreViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.explore.ExploreFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_padding">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_explore_title"
                    style="@style/TextAppearance.MaterialComponents.Headline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/explore_title"
                    android:textColor="@color/colorBlue1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_upcoming_events_title"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/upcoming_events_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_view_explore_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_upcoming_events"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@id/text_view_upcoming_events_title"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_event" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/text_view_trending_activities_title"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    android:text="@string/trending_activities_title"
                    android:textAllCaps="true"
                    android:textColor="@color/colorBlue1"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recycler_view_upcoming_events" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_trending_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@id/text_view_trending_activities_title"
                    tools:itemCount="5"
                    tools:listitem="@layout/item_activity" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </FrameLayout>
</layout>